--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <img src="images/sqx.png" alt="SQX">
-    <img src="images/btnSteam.png" alt="https://store.steampowered.com/app/1969650/Formula_TOP/">
+    <a href="https://store.steampowered.com/app/1969650/Formula_TOP/">
+      <img src="images/btnSteam.png" alt="Formula TOP on Steam">
+    </a>
   </body>
 </html>
