--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <img src="images/sqx.png" alt="SQX">
-    <a href="https://store.steampowered.com/app/1969650/Formula_TOP/">
+    <p><img src="images/sqx.png" alt="SQX"></p>
+    <p> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/" target="_blank">
       <img src="images/btnSteam.png" alt="Formula TOP on Steam">
-    </a>
+    </a> </p>
   </body>
 </html>
