--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/" target="_blank">
       <img src="images/btnSteam.png" alt="Formula TOP on Steam">
     </a> </p>
+    
+    <p><iframe src="https://store.steampowered.com/widget/1969650/" frameborder="0" width="646" height="190"></iframe></p>
+    
   </body>
 </html>
