--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="images/btnSteam.png" alt="Formula TOP on Steam">
     </a> </p>
     
-    <p><iframe src="https://store.steampowered.com/widget/1969650/" frameborder="0" width="646" height="190"></iframe></p>
+    <p style="text-align:center;"><iframe src="https://store.steampowered.com/widget/1969650/" frameborder="0" width="646" height="190"></iframe></p>
     
   </body>
 </html>
