--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p><img src="images/sqx.png" alt="SQX"></p>
-    <p> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/" target="_blank">
-      <img src="images/btnSteam.png" alt="Formula TOP on Steam">
-    </a> </p>
-    
+    <p style="text-align:center;"><img src="images/sqxLogo.png" alt="SQX Interactive"></p>
     <p style="text-align:center;"><iframe src="https://store.steampowered.com/widget/1969650/" frameborder="0" width="646" height="190"></iframe></p>
     
   </body>
