--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p style="text-align:center;"><img src="images/sqxLogo.png" alt="SQX Interactive"></p>
+    <p>Currently working on:</p>
     <p style="text-align:center;"><iframe src="https://store.steampowered.com/widget/1969650/" frameborder="0" width="646" height="190"></iframe></p>
     
   </body>
