--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p style="text-align:center;"><img src="images/sqxLogo.png" alt="SQX Interactive"></p>
     <p>Currently working on:</p>
     <p style="text-align:center;"><iframe src="https://store.steampowered.com/widget/1969650/" frameborder="0" width="646" height="190"></iframe></p>
-    <p><A HREF="presskit/presskit.html">Press kit</A></p>
+    <p><A HREF="presskit.html">Press kit</A></p>
   </body>
 </html>
