--- a/presskit.html
+++ b/presskit.html
@@ -9,24 +9,20 @@
   </head>
   <body>
     <p>Formula TOP press kit</p>
-    <p>Release:</p>
-    <p>PC Steam late 2022</p>
-    <p>In development:</p>
-    <p>Since Spring 2021</p>
-    <p>Team:</p>
-    <p>Solo developer SQX Interactive</p>
-    <p>Description:</p>
-    <p>Fun top-down 3D formula racing game with tense side-by-side battles against competitive AI or other people in online multiplayer. The perfect blend of tight arcade controls and immersive world of formula.</p>
-    <p><a href="presskit/trailer.mp4" download>Trailer 1080p mp4-file</a></p>
-    <p style="text-align:center;"><img src="presskit/logo.png"></p>
-    <p style="text-align:center;"><img src="presskit/capsule_big.png"></p>
-    <p style="text-align:center;"><img src="presskit/capsule_small.png"></p>
-    <p style="text-align:center;"><img src="presskit/gridshot.png"></p>
-    <p style="text-align:center;"><img src="presskit/x1.png"></p>
-    <p style="text-align:center;"><img src="presskit/x2.png"></p>
-    <p style="text-align:center;"><img src="presskit/x3.png"></p>
-    <p style="text-align:center;"><img src="presskit/x4.png"></p>
-    <p style="text-align:center;"><img src="presskit/x5.png"></p>
-    <p style="text-align:center;"><img src="presskit/y1e.png"></p>
+    <p>Release: <br> PC Steam late 2022</p>
+    <p>In development: <br> Since Spring 2021</p>
+    <p>Team: <br> Solo developer SQX Interactive</p>
+    <p>Description: <br> Fun top-down 3D formula racing game with tense side-by-side battles against competitive AI or other people in online multiplayer. The perfect blend of tight arcade controls and immersive world of formula.</p>
+	<p>Trailer: <br> <a href="presskit/trailer.mp4" download>1080p mp4-file</a></p>
+    <p><img src="presskit/logo.png"></p>
+    <p><img src="presskit/capsule_big.png"></p>
+    <p><img src="presskit/capsule_small.png"></p>
+    <p><img src="presskit/gridshot.png"></p>
+    <p><img src="presskit/x1.png"></p>
+    <p><img src="presskit/x2.png"></p>
+    <p><img src="presskit/x3.png"></p>
+    <p><img src="presskit/x4.png"></p>
+    <p><img src="presskit/x5.png"></p>
+    <p><img src="presskit/y1e.png"></p>
   </body>
 </html>
