--- a/presskit.html
+++ b/presskit.html
@@ -7,7 +7,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body style="width: 1920px;">
     <p>Formula TOP press kit</p>
     <p>Release: <br> PC Steam late 2022</p>
     <p>In development: <br> Since Spring 2021</p>
