--- a/presskit.html
+++ b/presskit.html
@@ -12,7 +12,7 @@
     <p>Release: <br> PC Steam late 2022</p>
     <p>In development: <br> Since Spring 2021</p>
     <p>Team: <br> Solo developer SQX Interactive</p>
-	<p>Steam Page: <br> https://store.steampowered.com/app/1969650/Formula_TOP/</p>
+	<p>Steam Page: <br> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/"</a></p>
     <p>Description: <br> Fun top-down 3D formula racing game with tense side-by-side battles against competitive AI or other people in online multiplayer. The perfect blend of tight arcade controls and immersive world of formula.</p>
 	<p>Trailer: <br> <a href="presskit/trailer.mp4" download>1080p mp4-file</a></p>
     <p><img src="presskit/logo.png"></p>
