--- a/presskit.html
+++ b/presskit.html
@@ -9,7 +9,7 @@
   </head>
   <body style="width: 1920px;">
     <p>Formula TOP press kit</p>
-    <p>Release: <br> PC Steam late 2022</p>
+    <p>Release: <br> PC Steam early 2023</p>
     <p>In development: <br> Since Spring 2021</p>
     <p>Team: <br> Solo developer SQX Interactive</p>
 	<p>Steam Page: <br> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/"> Formula TOP on Steam</a></p>
