--- a/presskit.html
+++ b/presskit.html
@@ -9,21 +9,22 @@
   </head>
   <body style="width: 1920px;">
     <p>Formula TOP press kit</p>
-    <p>Release: <br> PC Steam early 2023</p>
+    <p>Release: <br> PC Steam Early Access 2023 April 21</p>
     <p>In development: <br> Since Spring 2021</p>
     <p>Team: <br> Solo developer SQX Interactive</p>
 	<p>Steam Page: <br> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/"> Formula TOP on Steam</a></p>
-    <p>Description: <br> Fun top-down 3D formula racing game with tense side-by-side battles against competitive AI or other people in online multiplayer. The perfect blend of tight arcade controls and immersive world of formula.</p>
-	<p>Trailer: <br> <a href="presskit/trailer.mp4" download>1080p mp4-file</a></p>
+    <p>Description: <br> Formula TOP brings all the excitement of formula racing to a 3D top-down racing game. Plan the perfect pit strategy around changing weather conditions and race to victory against competitive AI or other players in online multiplayer.</p>
+	<p>Old trailer (new one will be released on April 21): <br> <a href="presskit/trailer.mp4" download>1080p mp4-file</a></p>
+    <p><img src="presskit/pit.gif"></p>	  
     <p><img src="presskit/logo.png"></p>
-    <p><img src="presskit/capsule_big.png"></p>
-    <p><img src="presskit/capsule_small.png"></p>
-    <p><img src="presskit/gridshot.png"></p>
-    <p><img src="presskit/x1.png"></p>
-    <p><img src="presskit/x2.png"></p>
-    <p><img src="presskit/x3.png"></p>
-    <p><img src="presskit/x4.png"></p>
-    <p><img src="presskit/x5.png"></p>
-    <p><img src="presskit/y1e.png"></p>
+    <p><img src="presskit/small.png"></p>
+    <p><img src="presskit/medium.png"></p>
+    <p><img src="presskit/big.png"></p>	  
+    <p><img src="presskit/0.png"></p>
+    <p><img src="presskit/1.png"></p>
+    <p><img src="presskit/2.png"></p>
+    <p><img src="presskit/3.png"></p>	 
+    <p><img src="presskit/4.png"></p>
+    <p><img src="presskit/5.png"></p>
   </body>
 </html>
