--- a/presskit.html
+++ b/presskit.html
@@ -11,10 +11,10 @@
     <p>Formula TOP press kit</p>
     <p>Release: <br> PC Steam Early Access 2023 April 21</p>
     <p>In development: <br> Since Spring 2021</p>
-    <p>Team: <br> Solo developer SQX Interactive</p>
+    <p>Team: <br> Solo developer SQX Interactive (Finland)</p>
 	<p>Steam Page: <br> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/"> Formula TOP on Steam</a></p>
     <p>Description: <br> Formula TOP brings all the excitement of formula racing to a 3D top-down racing game. Plan the perfect pit strategy around changing weather conditions and race to victory against competitive AI or other players in online multiplayer.</p>
-	<p>Old trailer (new one will be released on April 21): <br> <a href="presskit/trailer.mp4" download>1080p mp4-file</a></p>
+	<p>Trailer: <br> <a href="https://www.youtube.com/watch?v=X0OQmZPC-WY">Youtube</a></p>
     <p><img src="presskit/pit.gif"></p>	  
     <p><img src="presskit/logo.png"></p>
     <p><img src="presskit/small.png"></p>
