--- a/viralborn.html
+++ b/viralborn.html
@@ -8,10 +8,17 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body style="width: 1920px;">
-    <p>Viralborn visualizer</p>
+    <p>Viralborn visual</p>
+    <p>Yksinkertaistettu kuvaus miten videoklipeistä luodaan kokonaisia videoita ja miten ne pisteytetään.</p>
+    <p>Esimerkkinä ihmisinfluenceria matkiva kissa, jolla on seuraavaa videota varten käytettävissä tällaiset klipit:</p>
+    <p><img src="viralborn/collection2.png"></p>	
+    <p>Klipit voi järjestää tagien mukaan. Niitä raahataan "videoeditoriin". Seuraavassa kuvassa videoeditoriin on raahattu viisi satunnaista klippiä:</p>
     <p><img src="viralborn/example1.png"></p>	  
+    <p>Editori kertoo että videossa ei ole teemaa, vaihtelua on useiden tagien muodossa ja lopullinen tykkäyskerroin on 8. Yritetäänpä uudelleen käyttämällä vain videoita, joissa kissalla on ihmisvaatteet:</p>
     <p><img src="viralborn/example2.png"></p>
+    <p>Kun tietty tagi löytyy kaikista videoklipeistä saadaan teeman avulla suuri tykkäyskerroin. Lisäksi on hyvä olla mahdollisimman paljon vaihtelua teeman sisällä. Lopullinen tykkäyskerroin 16. Vieläkin taitaa olla parannettavaa!</p>
     <p><img src="viralborn/example3.png"></p>
+    <p>Tykkäyskerroin 26! Tällä mennään. Valitaan (tässä tapauksessa kuvitellaan) vielä sopiva musiikki ja video on valmis:</p>
     <p><img src="viralborn/finished.gif"></p>
   </body>
 </html>
