--- a/presskit.html
+++ b/presskit.html
@@ -9,14 +9,16 @@
   </head>
   <body style="width: 1920px;">
     <p>Formula TOP press kit</p>
-    <p>Release: <br> PC Steam Early Access 2023 April 21</p>
+    <p>Release: <br> PC Steam Full Release 2024 November 24</p>
     <p>In development: <br> Since Spring 2021</p>
     <p>Team: <br> Solo developer SQX Interactive (Finland)</p>
 	<p>Steam Page: <br> <a href="https://store.steampowered.com/app/1969650/Formula_TOP/"> Formula TOP on Steam</a></p>
-    <p>Description: <br> Formula TOP brings all the excitement of formula racing to a 3D top-down racing game. Plan the perfect pit strategy around changing weather conditions and race to victory against competitive AI or other players in online multiplayer.</p>
+    <p>Description: <br> Formula TOP brings all the excitement of formula racing to a 3D top-down racing game. Plan the perfect pit strategy around changing weather conditions and race to victory against engaging AI or other players in online multiplayer.</p>
 	<p>Trailer: <br> <a href="https://www.youtube.com/watch?v=X0OQmZPC-WY">Youtube</a></p>
     <p><img src="presskit/pit.gif"></p>	  
     <p><img src="presskit/logo.png"></p>
+	<p><img src="presskit/header.png"></p>
+	<p><img src="presskit/main.png"></p>
     <p><img src="presskit/small.png"></p>
     <p><img src="presskit/medium.png"></p>
     <p><img src="presskit/big.png"></p>	  
